# whisper.cpp

./: run_streaming.sh
examples/stream/: CMakeLists.txt  audio_manager.cpp  audio_manager.hpp  params.cpp  stream.cpp  translator.cpp  translator.h
